fix issue with long param names overflowing
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/EuPathSiteCommon/branches/fold_change_graph@55140 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/webapp/wdkCustomization/css/question.css
+++ b/Site/webapp/wdkCustomization/css/question.css
@@ -125,6 +125,7 @@
 }
 
 .fold-change .param-control .param {
+  width: 95%; /* force wrap */
   text-indent: -2em;
   position: relative;
   left: 2em;
